--- a/src/styles/hotspots.css
+++ b/src/styles/hotspots.css
@@ -1,7 +1,7 @@
 /* ---------- Hotspot Layout ---------- */
 .hotspot-container {
     position: relative;
-    background-color: black;
+    background-color: var(--color-background);
     padding: 2rem;
     display: flex;
     justify-content: center;
