--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -5,7 +5,7 @@
 .calpoly-hero-wrapper {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 50vh;
     overflow: hidden;
 }
 
@@ -31,12 +31,12 @@
     left: 6%;
     z-index: 2;
     color: white;
-    max-width: 750px;
+    max-width: 700px;
     display: flex;
     flex-direction: column;
     gap: 1rem;
     padding: 2rem;
-    background: rgba(0, 0, 0, 0.55);
+    background: rgba(0, 0, 0, 0.75);
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
@@ -132,8 +132,8 @@
 }
 
 .calpoly-text-block h2 {
-    font-size: 2.2rem;
-    color: var(--color-accent);
+    font-size: 2rem;
+    color: var(--color-background);
     margin-bottom: 1rem;
 }
 
@@ -166,6 +166,16 @@
 
 /* ---------- Responsive Styling ---------- */
 @media (max-width: 768px) {
+
+    .aircraft-hero-foreground,
+    .career-hero-foreground {
+        object-position: 70% 70%;
+    }
+
+    .team-hero-foreground {
+        object-position: 63% 50%;
+    }
+
     .hero-overlay {
         top: 5%;
         left: 5%;
@@ -234,6 +244,18 @@
     .calpoly-video-container iframe {
         height: 600px;
     }
+}
+
+@media (min-width: 1999px) {
+
+    .aircraft-hero-foreground {
+        object-position: 50% 65%;
+    }
+
+    .team-hero-foreground {
+        object-position: 50% 30%;
+    }
+
 }
 
 .visually-hidden {
