Minor Button fix

--- a/src/styles/aircraft.css
+++ b/src/styles/aircraft.css
@@ -178,4 +178,9 @@
         font-size: 1.25rem;
         line-height: 1.4;
     }
+
+    .buttons .download-button {
+        font-size: 0.8rem;
+    }
+
 }
