--- a/src/styles/hotspots.css
+++ b/src/styles/hotspots.css
@@ -6,25 +6,25 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    max-width: 1000px;
+    max-width: 1600px;
     margin: auto;
     overflow: visible;
 }
 
 .hotspot-image {
-    width: 100%;
-    max-width: 1000px;
+    width: auto;
+    height: auto;
     object-fit: contain;
 }
 
 /* ---------- Circle Button ---------- */
 .hotspot-circle {
     position: absolute;
-    width: 20px;
-    height: 20px;
-    border: none;
+    width: 25px;
+    height: 25px;
+    border: 2px solid black;
     border-radius: 50%;
-    background-color: #E5C007;
+    background: #E5C007;
     cursor: pointer;
     transition: all 0.3s ease;
     z-index: 5;
