--- a/src/styles/team.css
+++ b/src/styles/team.css
@@ -210,6 +210,15 @@
     color: white;
 }
 
+.learn-more-line {
+    font-size: 0.85rem;
+    color: #aaa;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    font-style: italic;
+}
+
+
 /* ------------------------------
    RESPONSIVE (Mobile)
 ------------------------------ */
